fix: Correct CSS units for positioning and add overflow hidden to prevent horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -62,7 +66,7 @@ body {
   background-image: url('/images/papel1.svg');
   position: absolute;
   top: 0;
-  left:10;
+  left:10px;
   z-index: 10;
   width: 300px;
   height: 300px;
@@ -71,8 +75,8 @@ body {
 .papel2{
   background-image: url('/images/papel2.svg');
   position: absolute;
-  top: 350;
-  right: 100;
+  top: 350px;
+  right: 100px;
   z-index: 10;
   width: 200px;
   height: 220px;
@@ -82,7 +86,7 @@ body {
   background-image: url('/images/papel3.svg');
   position: absolute;
   bottom: -100;
-  left: 400;
+  left: 400px;
   z-index: 10;
   width: 287.45px;
   height: 285.79px;
